--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,25 +2,27 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&display=swap');
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: var(--secondary-source);
+  font-family: var(--primary-source);
 }
 
+/* criação de variáveis de estilo*/
 :root {
   --brand-color: #2FBD6A;
   --dark-10: #2D3748;
   --dark-20: #718096;
   --dark-30: #E7E7E7;
   --dark-40: #E7E7E7;
-  --primary-source: 'Inter', sans-serif; 
-  --secondary-source: 'Roboto', sans-serif;
+  --primary-source: 'Roboto', sans-serif; 
+  --secondary-source: 'Rowdies', sans-serif;
 }
 
+/* estilização header*/
 header {
   display: flex;
   justify-content: center;
@@ -72,6 +74,7 @@ select {
   width: 26px;
 }
 
+/* estilização main*/
 main {
   display: flex;
   flex-direction: column;
@@ -79,88 +82,14 @@ main {
   background-color: var(--dark-30);
 }
 
-.box-1 {
-  width: 80vw;
-}
-
-h1 {
-  padding: 2vh 0;
-}
-
-.my-custom-carousel {
-  position: relative;
-  /* height: 80vh; */
-  /* padding: 4vh 0; */
-}
-
-.box-1 h2 {
-  position: absolute;
-  top: 2vh;
-  left: 50%;
-  color: var(--dark-40);
-}
-
-.my-custom-carousel .slide {
-  height: 60vh;
-}
-
-.box-2 {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  width: 80vw;
-  padding: 5vh 0;
-}
-
-.box-2 h2 {
-  padding: 2vh 0;
-}
-
-.news {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
-  justify-content: center;
-}
-
-.news figure {
-  position: relative;
-  background-color: white;
-  box-shadow: 2px 2px 8px var(--dark-20);
-  width: 280px;
-  padding: 10px 10px 40px 10px;
-}
-
-.image-list {
-  height: auto;
-  width: 100%;
-}
-
-.favorite-light {
-  width: 26px;
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-
-
-.news button {
-  border: 2px solid var(--dark-10);
-  color: var(--dark-10);
-  border-radius: 10px;
-  padding: 4px 10px;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  background-color: var(--dark-30);
-  border: none;
-}
-
+/* estilização footer */
 footer {
   display: flex;
   justify-content: center;
-  background-color: var(--brand-color);
+  background-color: var(--dark-10);
   padding: 4vh 0;
+  border-top: 1px solid var(--dark-20);
+  color: var(--dark-40);
 }
 
 footer section {
@@ -181,4 +110,218 @@ footer section {
 
 #favorite-reservation {
   width: 26px;
+}
+
+/* estilização Página inicial e Marcas*/
+
+.box-1 {
+  padding: 2vh 0;
+  width: 80vw;
+}
+
+h1 {
+  font-size: 2.5rem;
+}
+
+h2 {
+  font-size: 1.5rem;
+  margin-bottom: 2vh;
+  font-family: var(--secondary-source);
+}
+
+.my-custom-carousel {
+  position: relative;
+  /* height: 80vh; */
+  /* padding: 4vh 0; */
+}
+
+.box-1 h1 {
+  position: absolute;
+  top: 2vh;
+  left: 50%;
+  color: var(--dark-40);
+}
+
+.my-custom-carousel .slide {
+  height: 70vh;
+}
+
+.my-custom-carousel .slide img {
+  object-fit: cover;
+}
+
+.box-2 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 80vw;
+  padding: 2vh 0 6vh 0;
+}
+
+.news {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  justify-content: center;
+}
+
+.news figure {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+  background-color: var(--dark-40);
+  box-shadow: 2px 2px 8px var(--dark-20);
+  width: 25vw;
+  padding: 10px;
+  border-radius: 2px;
+}
+
+.news figure:hover {
+  transform: scale(1.04);
+}
+
+.image-list {
+  height: auto;
+  width: 100%;
+  border-radius: 2px;
+  height: 26vh;
+  object-fit: cover;
+}
+
+.favorite-light {
+  width: 26px;
+  position: absolute;
+  right: 20px;
+  top: 20px;
+}
+
+.news button, .details-action button, .form-box button {
+  color: var(--dark-10);
+  border-radius: 4px;
+  padding: 4px 10px;
+  right: 10px;
+  color: var(--dark-10);
+  border: 2px solid var(--dark-10);
+}
+
+.news button:hover , .details-action button:hover, .form-box button:hover {
+  background-color: var(--dark-10);
+  color: var(--dark-40);
+}
+
+.news div {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+/* estilização página Saber mais */
+
+.details-box {
+  display: flex;
+  width: 80vw;
+  justify-content: space-between;
+}
+
+.details-collection-img {
+  display: flex;
+  width: 60vw;
+  flex-direction: column-reverse;
+  padding: 2vh 0;
+  gap: 2vh;
+  margin-right: 20px;
+}
+
+.details-div2 {
+  width: 60vw;
+}
+
+.details-div2 img {
+ width: 100%;
+ border-radius: 2px;
+ object-fit: cover;
+}
+
+.details-div1 {
+  display: flex;
+  justify-content: space-between;
+  width: 60vw;
+}
+
+.details-div1 img {
+  width: 29.5vw;
+  border-radius: 2px;
+  object-fit: cover;
+ }
+
+.details-description {
+  display: flex;
+  flex-direction: column;
+  padding: 2vh 0;
+  gap: 10px;
+}
+
+.details-description  div{
+  display: flex;
+  align-items: center;
+  gap: 2vw;
+}
+
+.details-description img {
+  width: 26px;
+}
+
+.details-box h3 {
+  font-family: var(--secondary-source);
+  font-size: 1.5rem;
+}
+
+/* estilização do formulário */
+
+.form-box {
+  width: 80vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4vh 0;
+  height: 74vh;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 8px var(--dark-20);
+  padding: 20px;
+  border-radius: 2px;
+  gap: 10px;
+}
+
+.form-box h2 {
+  font-size: 1.5rem;
+  margin-bottom: 2vh;
+}
+
+label {
+  color: var(--dark-10);
+  display: flex;
+  flex-direction: column;
+}
+
+input{
+  width: 100%;
+  padding: 4px 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input:focus {
+  border-color: #2FBD6A;
+  outline: none;
+}
+
+.form-box button {
+  margin-top: 2vh;
 }
