--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,16 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Rowdies:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: var(--primary-source);
+  font-family: var(--primary-source); /* Aplicar fonte globalmente */
 }
 
-/* criação de variáveis de estilo*/
+/* Criação de variáveis de estilo */
 :root {
   --brand-color: #2FBD6A;
   --dark-10: #2D3748;
@@ -19,10 +19,10 @@
   --dark-30: #E7E7E7;
   --dark-40: #E7E7E7;
   --primary-source: 'Roboto', sans-serif; 
-  --secondary-source: 'Rowdies', sans-serif;
+  --secondary-source: 'Inter', sans-serif;
 }
 
-/* estilização header*/
+/* Estilização header */
 header {
   display: flex;
   justify-content: center;
@@ -30,6 +30,7 @@ header {
   height: 10vh;
   border-bottom: var(--dark-20) 1px solid;
   background-color: var(--dark-40);
+  font-family: var(--primary-source); /* Aplicar fonte no header */
 }
 
 header section {
@@ -46,12 +47,14 @@ header section {
 
 .logo figcaption {
   cursor: default;
+  font-family: var(--secondary-source);  /* Fonte alternativa */
+  font-weight: 600; /* Aumentar o peso */
+  color: var(--dark-10);
 }
 
 .icon-car {
   width: 60px;
   margin-right: 10px;
-  font-family: var(--secondary-source);
 }
 
 header ul {
@@ -61,7 +64,7 @@ header ul {
 
 select {
   background-color: var(--dark-40);
-  font-family: var(--secondary-source);
+  font-family: var(--primary-source);
   color: var(--dark-10);
   cursor: pointer;
 }
@@ -74,15 +77,16 @@ select {
   width: 26px;
 }
 
-/* estilização main*/
+/* Estilização main */
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--dark-30);
+  font-family: var(--primary-source); /* Aplicar fonte no main */
 }
 
-/* estilização footer */
+/* Estilização footer */
 footer {
   display: flex;
   justify-content: center;
@@ -90,6 +94,7 @@ footer {
   padding: 4vh 0;
   border-top: 1px solid var(--dark-20);
   color: var(--dark-40);
+  font-family: var(--primary-source); /* Aplicar fonte no footer */
 }
 
 footer section {
@@ -112,34 +117,35 @@ footer section {
   width: 26px;
 }
 
-/* estilização Página inicial e Marcas*/
-
+/* Estilização Página inicial e Marcas */
 .box-1 {
   padding: 2vh 0;
   width: 80vw;
-}
-
-h1 {
-  font-size: 2.5rem;
+  font-family: var(--primary-source); /* Aplicar fonte na caixa 1 */
 }
 
 h2 {
   font-size: 1.5rem;
   margin-bottom: 2vh;
-  font-family: var(--secondary-source);
+  font-family: var(--secondary-source); /* Fonte alternativa */
+  font-weight: 600; /* Aumentar o peso */
+  color: var(--dark-10);
 }
 
 .my-custom-carousel {
   position: relative;
-  /* height: 80vh; */
-  /* padding: 4vh 0; */
 }
 
 .box-1 h1 {
   position: absolute;
   top: 2vh;
-  left: 50%;
+  left: 2vw;
   color: var(--dark-40);
+  font-size: 2.5rem;
+  font-family: var(--secondary-source); /* Fonte alternativa */
+  font-weight: 600; /* Aumentar o peso */
+  background-color: var(--dark-10);
+  border-radius: 100%;
 }
 
 .my-custom-carousel .slide {
@@ -156,12 +162,13 @@ h2 {
   justify-content: center;
   width: 80vw;
   padding: 2vh 0 6vh 0;
+  font-family: var(--primary-source); /* Aplicar fonte na caixa 2 */
 }
 
 .news {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  gap: 36px;
   justify-content: center;
 }
 
@@ -175,6 +182,7 @@ h2 {
   width: 25vw;
   padding: 10px;
   border-radius: 2px;
+  font-family: var(--primary-source); /* Aplicar fonte nas figuras de notícias */
 }
 
 .news figure:hover {
@@ -201,11 +209,11 @@ h2 {
   border-radius: 4px;
   padding: 4px 10px;
   right: 10px;
-  color: var(--dark-10);
   border: 2px solid var(--dark-10);
+  font-family: var(--primary-source); /* Aplicar fonte nos botões */
 }
 
-.news button:hover , .details-action button:hover, .form-box button:hover {
+.news button:hover, .details-action button:hover, .form-box button:hover {
   background-color: var(--dark-10);
   color: var(--dark-40);
 }
@@ -217,12 +225,12 @@ h2 {
   justify-content: space-between;
 }
 
-/* estilização página Saber mais */
-
+/* Estilização página Saber mais */
 .details-box {
   display: flex;
   width: 80vw;
   justify-content: space-between;
+  font-family: var(--primary-source); /* Aplicar fonte na caixa de detalhes */
 }
 
 .details-collection-img {
@@ -239,9 +247,9 @@ h2 {
 }
 
 .details-div2 img {
- width: 100%;
- border-radius: 2px;
- object-fit: cover;
+  width: 100%;
+  border-radius: 2px;
+  object-fit: cover;
 }
 
 .details-div1 {
@@ -254,7 +262,7 @@ h2 {
   width: 29.5vw;
   border-radius: 2px;
   object-fit: cover;
- }
+}
 
 .details-description {
   display: flex;
@@ -263,7 +271,7 @@ h2 {
   gap: 10px;
 }
 
-.details-description  div{
+.details-description div {
   display: flex;
   align-items: center;
   gap: 2vw;
@@ -274,19 +282,20 @@ h2 {
 }
 
 .details-box h3 {
-  font-family: var(--secondary-source);
+  font-family: var(--secondary-source); /* Fonte alternativa */
+  font-weight: 600; /* Aumentar o peso */
   font-size: 1.5rem;
+  color: var(--dark-10);
 }
 
-/* estilização do formulário */
-
+/* Estilização do formulário */
 .form-box {
   width: 80vw;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 4vh 0;
-  height: 74vh;
+  font-family: var(--primary-source); /* Aplicar fonte na caixa do formulário */
 }
 
 form {
@@ -301,6 +310,9 @@ form {
 .form-box h2 {
   font-size: 1.5rem;
   margin-bottom: 2vh;
+  font-family: var(--secondary-source); /* Fonte alternativa */
+  font-weight: 600; /* Aumentar o peso */
+  color: var(--dark-10);
 }
 
 label {
@@ -309,7 +321,7 @@ label {
   flex-direction: column;
 }
 
-input{
+input {
   width: 100%;
   padding: 4px 10px;
   border: 1px solid #ccc;
